# gleditor

./: .gitignore  CMakeLists.txt  FIXES_APPLIED.md  FPS_FIXES_SUMMARY.md  INSTALL.md  Makefile  README.md  SETTINGS_STATUS.md  build.bat  build.sh  install.bat  install.sh
.github/workflows/: ci.yml  release.yml
aur/: .SRCINFO  PKGBUILD  PKGBUILD-git
data/: Info.plist.in  gleditor.desktop
docs/: CROSS_PLATFORM.md  SPLIT_LAYOUT.md  TOOLBAR_VIEW_CONTROLS.md
examples/: simple_shader_test.c
include/: platform_compat.h
src/: main.c  shader_editor.c  shader_editor.h
src/editor/: editor_error_panel.c  editor_error_panel.h  editor_help.c  editor_help.h  editor_preview.c  editor_preview.h  editor_settings.c  editor_settings.h  editor_statusbar.c  editor_statusbar.h  editor_tabs.c  editor_tabs.h  editor_templates.c  editor_templates.h  editor_text.c  editor_text.h  editor_toolbar.c  editor_toolbar.h  editor_window.c  editor_window.h  file_operations.c  file_operations.h  glsl_completion.c  glsl_completion.h  keyboard_shortcuts.c  keyboard_shortcuts.h
src/shader_lib/: API_INDEX.md  IMPLEMENTATION_COMPLETE.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  neowall_shader_api.c  neowall_shader_api.h  shader_core.c  shader_log.h  shader_multipass.c  shader_multipass.h  shadertoy_compat.c
test_shaders/: apollo.glsl
